Fix icon alignment on project page

--- a/_assets/sass/pages/_projects.sass
+++ b/_assets/sass/pages/_projects.sass
@@ -65,10 +65,10 @@
     > span
       align-items: center
       display: flex
+      font-feature-settings: "lnum"
       margin-right: $baseline
 
     &__icon
-      align-items: center
       color: $color-red
-      display: flex
       margin-right: #{($baseline / 4)}
+
